--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
+  box-sizing: border-box;
   margin: 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+  height: 100vh;
+  width: 100%;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
